# vinos

./: .editorconfig  .flaskenv  .gitignore  201912list.xlsx  README.md  docker-compose.yml  grapes.json  pyproject.toml  red.json  requirements.txt  test.py  type.json
app/: main.py  models.py
app/db/: __init__.py  models.py
app/routers/: wines.py
dowant/: manage.py
dowant/app/: admin.py  excels.py  models.py  urls.py  views.py
dowant/app/migrations/: 0001_initial.py  0002_auto_20200614_0853.py  0003_auto_20200614_0913.py
dowant/dowant/: asgi.py  settings.py  urls.py  wsgi.py
wine/: settings.py
winesearch/: apps.py  bordeax.py  models.py
