[tool.poetry]
name = "vinos"
version = "0.1.0"
description = ""
authors = ["sangmoon <cholsoo22001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.105.0"}
pandas = "^2.1.4"
typer = "^0.9.0"
motor = "^3.3.2"
odmantic = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
